fix: update destructive color to improve contrast

--- a/apps/www/styles/globals.css
+++ b/apps/www/styles/globals.css
@@ -61,7 +61,7 @@
     --secondary: 222.2 47.4% 11.2%;
     --secondary-foreground: 210 40% 98%;
 
-    --destructive: 0 63% 31%;
+    --destructive: 0 100% 50%;
     --destructive-foreground: 210 40% 98%;
 
     --ring: 216 34% 17%;
